# elektrum

./: .actrc  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CHANGES.md  Dockerfile  Dockerfile-App  Dockerfile-Proxy  Dockerfile.txt  Dockerrun.aws.json  INSTALL.md  ISSUES.md  LICENSE  Makefile  Pipfile  README.md  TODO.md  Usage.md  app.sh  bitbucket-pipelines.yml  build  deploy  docker-compose.yml  docker-entrypoint.sh  docker-run.sh  dodo  dodo.py  elektron-deploy  elektron-release  elektrum-deploy  elektrum-release  gen-certificate.sh  integration_test.py  pyproject.toml  release.sh  test.html  version.txt  vscode.env
.circleci/: config.yml
.ebextensions/: application.config  environment.config  logging.config  securelistener.config
.elasticbeanstalk/: config.yml
.github/workflows/: ci.yml  coverage.yml  django.yml  release.yml
application/: Makefile  conftest.py  pytest.ini
application/base/: models.py
application/base/migrations/: 0001_initial.py
application/base/tests/: util.py
application/base/views/: errors.py
application/date_dimension/migrations/: 0002_datedimension_iso_date.py  0003_populate_datedimension.py
application/elektrum/: build_util.py  context_processors.py  deploy_util.py  env_util.py  log.py  settings.py  urls.py
application/elektrum/deploy/: deploy.py  task_actions.py  version_info.py
application/emailer/: urls.py
application/emailer/tests/: factories.py  test_unsubscribe.py
application/emailer/views/: send_email.py  unsubscribe.py
application/media_items/: models.py  urls.py
application/media_items/migrations/: 0004_auto_20190422_0004.py  0005_auto_20190506_1704.py  0006_auto_20190506_1714.py  0008_auto_20190512_1011.py  0009_mediaitem_focal_length.py
application/media_items/tests/: conftest.py  test_collections_view.py  test_media_item_list_view.py  test_media_item_upload.py  test_media_processor_check.py
application/media_items/views/: collections_view.py  media_list_view.py  media_processor_check.py  upload_request.py
application/pages/: views.py
application/pages/templates/: base_protected.html  home.html
application/sharing/: models.py
application/sharing/tests/: factories.py
application/static/css/: app.css  app.css.map  base.css  media_item.css  status-processor-log.css
application/static/js/: app.42803ae7f16a63570a9a.js.map  app.js  app.js.map  manifest.js  manifest.js.map  vendor.a084c32ecd63c0991901.js.map  vendor.js  vendor.js.map
application/status/: models.py  urls.py  views.py
application/status/migrations/: 0001_initial.py  0002_alter_processorlog_original_file_path_and_more.py
application/status/views/: db_create.py  ok.py  processor_status.py
application/users/: admin.py  forms.py
application/users/templates/: user_profile.html
debugging-tools/ansible/: test.sh  test.yml
deploy/: Dockerfile  Pipfile  config.env  deploy.sh  docker-compose.yml  facts.sh  hosts.inventory
deploy/group_vars/: project.elektron.yml
deploy/host_vars/: elektron.vpc.yml
doc/: DB_SETUP-DEV.md  DB_SETUP-STG.md  INSTALL.md  ISSUES.md  STATIC_FILES.md  VPC_NETWORK.md  VSCODE_LAUNCH_CFG.md
docker/: entrypoint.sh
elektron/: settings.py  urls.py  wsgi.py
elektron/settings/: __init__.py  base.py  production.py  staging.py
etc/: config.env  database-info.txt  development.env.tmpl  ecs-params.yml  photo-processor-deploy.py  staging.env.tmpl
etc/env/: ci.env  development.env.tmpl  env.tmpl  staging.env.tmpl
functions/application/: .coveragerc  Makefile
network/: ISSUES.md  Pipfile  README.md  diagram.monopic  hosts.ini  hosts.inventory  issues.md  requirements.yml  run.sh  setup.sh  site.yml  test-run.sh  test.yml
network/group_vars/: all.yml  development.yml  production.yml  project.elektron.yml  staging.yml
network/host_vars/: elektron.rds.yml  elektron.vpc.yml
network/tasks/: rds.yml  show-facts.yml  vpc.yml
pages/templates/: home.html
processor/: Makefile  README.md  build.gradle  settings.gradle
project/: .coveragerc  conftest.py  manage.py  pytest.ini
project/albums/: models.py  urls.py  views.py
project/base/: authentication.py  models.py
project/collection/: models.py  urls.py  views.py
project/date_dimension/: apps.py  models.py
project/elektron/: context_processors.py  env_util.py  log.py  settings.py  test_runner.py  urls.py
project/elektrum/: context_processors.py  env_util.py  lambda.py  log.py  settings.py  templates.py  urls.py
project/emailer/: urls.py  utils.py  views.py
project/media_items/: apps.py  models.py  upload_signing.py  urls.py  views.py
project/pages/: urls.py  views.py
project/scripts/: photo-processor-deploy.py
project/sharing/: fields.py  forms.py  models.py  urls.py  views.py
project/status/: urls.py  views.py
project/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
scripts/: functional_test.py  localstack-compose.yml  photo-processor-deploy.py
scripts/tests/: functional_test.py
static/css/: base.css
tools/: decrypt-var.sh  encrypt-var.sh  gen-cert.sh  logging-tree.py  source-env.sh  upload.py
tools/lambda/: Makefile
tools/local-dev/: https-server.py  local-dev-setup.py
tools/sample-data/: publish.pl  run.sh  sample-data.csv  sample-data.url
tools/vpn/: vpn-setup.py
users/: forms.py  views.py
users/migrations/: 0001_initial.py
(+313 files in other folders)
