[tool.poetry]
name = "elektrum"
version = "0.24.dev0"
description = "Media archiving & management system."
authors = ["Edward Q. Bridges <ebridges@roja.cc>"]
readme = "README.md"
homepage = "https://elektrum.photos"
repository = "https://bitbucket.org/roja-cc/elektrum"
license = "CC-BY-NC-ND-4.0"

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2.5"
django-allauth = "^0.40.0"
gunicorn = "^19.9.0"
django-dotenv = "^1.4.2"
psycopg2-binary = "^2.8.3"
boto3 = "^1.9.228"
django-sslserver = "^0.21.0"
django-storages = "^1.7.2"
djangorestframework = "^3.10.3"

[tool.poetry.dev-dependencies]
pylint = "^2.3.1"
ansible = { git = "https://github.com/ansible/ansible.git", rev = "d77697e" }
ansible-vault = "^1.2.0"
botocore = "^1.12.228"
boto = "^2.49.0"
zest-releaser = "^6.19.1"
selenium = "^3.141.0"
coverage = "^4.5.4"
factory-boy = "^2.12.0"
pytest = "5.1.2"
pytest-django = "^3.5.1"
pytest-cov = "^2.7.1"
pytest-factoryboy = "^2.0.3"
records = "^0.5.3"
virtualenvwrapper = "^4.8.4"
assertpy = "^0.14.0"
jinja2 = "^2.10.1"
cryptography = "^2.7"
jmespath-terminal = "^0.2.1"
autopep8 = "^1.4.4"
logging_tree = "^1.8"

[build-system]
## poetry version should agree with version in Dockerfile-App
requires = ["poetry==0.12.17"]
build-backend = "poetry.masonry.api"
