[build-system]
requires = [ "poetry==1.0.5",]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = [ "py312",]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ['E203', 'E231', 'W503', 'B023', 'E501', 'E266']
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    ".venv",
]

[tool.poetry]
name = "elektrum"
package-mode = false
version = "0.10.1"
description = "Media archiving & management system."
authors = [ "Edward Q. Bridges <ebridges@roja.cc>",]
readme = "README.md"
homepage = "https://elektrum.photos"
repository = "https://github.com/ebridges/elektrum"
license = "CC-BY-NC-ND-4.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.10.1"
tag_format = "v$version"
version_files = [ "pyproject.toml:version", "application/version.txt",]
changelog_file = "CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4"
django-allauth = "^0.63.1"
gunicorn = "22.0.0"
psycopg2-binary = "2.9.9"
django-sslserver = "0.22"
djangorestframework = "3.15.1"
toml = "0.10.2"
python-dotenv = "1.0.1"
pillow = "10.3.0"
django-amazon-ses = "4.0.1"
apig_wsgi = "2.18.0"
sentry-sdk = "2.3.1"
django-request-id = "1.0.0"
django-storages = "1.14.3"
jwt = "^1.3.1"

[tool.poetry.dev-dependencies]
pylint = "3.2.2"
ansible-vault = "^2"
botocore = "1.34.112"
boto = "^2.49.0"
selenium = "4.21.0"
coverage = "7.5.1"
factory-boy = "3.3.0"
pytest = "8.2.1"
pytest-django = "4.8.0"
pytest-cov = "5.0.0"
pytest-factoryboy = "2.7.0"
records = "0.6.0"
virtualenvwrapper = "6.1.0"
assertpy = "1.1"
jinja2 = "3.1.4"
cryptography = "42.0.7"
logging_tree = "1.10"
lgw = "1.2.4"
pre-commit = "3.7.1"
django-extensions = "3.2.3"
Werkzeug = "3.0.3"
doit = "0.36.0"
awscli = "1.32.112"
commitizen = "3.27.0"
boto3 = "1.34.112"
ansible = "^9"
black = "24.4.2"
flake8 = "7.1.1"
flake8-pyproject = "^1.2.3"